pre webhook refactoring